Fortran-glpk/src/glpk.f90

                    type(c_ptr), value :: P
                    integer(c_int), value :: flags
            end subroutine
            subroutine glp_unscale_prob(P) bind(C,name="glp_unscale_prob")
                use iso_c_binding
                    type(c_ptr), value :: P
            end subroutine
            subroutine glp_set_row_stat(P,i,stat) bind(C,name="glp_set_row_stat")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int), value :: i
                    integer(c_int), value :: stat
            end subroutine
            subroutine glp_set_col_stat(P,j,stat) bind(C,name="glp_set_col_stat")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int), value :: j
                    integer(c_int), value :: stat
            end subroutine
            subroutine glp_std_basis(P) bind(C,name="glp_std_basis")
                use iso_c_binding
                    type(c_ptr), value :: P
            end subroutine
            subroutine glp_adv_basis(P,flags) bind(C,name="glp_adv_basis")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int), value :: flags
            end subroutine
            subroutine glp_cpx_basis(P) bind(C,name="glp_cpx_basis")
                use iso_c_binding
                    type(c_ptr), value :: P
            end subroutine
            function glp_simplex(P,parm) bind(C,name="glp_simplex")
                use iso_c_binding
                use glpk_types
                    type(c_ptr), value :: P
                    type(glp_smcp), value :: parm
                    integer(c_int) :: glp_simplex
            end function
            function glp_exact(P,parm) bind(C,name="glp_exact")
                use iso_c_binding
                use glpk_types
                    type(c_ptr), value :: P
                    type(glp_smcp), value :: parm
                    integer(c_int) :: glp_exact
            end function
            subroutine glp_init_smcp(parm) bind(C,name="glp_init_smcp")
                use iso_c_binding
                use glpk_types
                    type(glp_smcp) :: parm
            end subroutine
            function glp_get_status(P) bind(C,name="glp_get_status")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int) :: glp_get_status
            end function
            function glp_get_prim_stat(P) bind(C,name="glp_get_prim_stat")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int) :: glp_get_prim_stat
            end function
            function glp_get_dual_stat(P) bind(C,name="glp_get_dual_stat")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int) :: glp_get_dual_stat
            end function
            function glp_get_obj_val(P) bind(C,name="glp_get_obj_val")
                use iso_c_binding
                    type(c_ptr), value :: P
                    real(c_double) :: glp_get_obj_val
            end function
            function glp_get_row_stat(P,i) bind(C,name="glp_get_row_stat")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int), value :: i
                    integer(c_int) :: glp_get_row_stat
            end function
            function glp_get_row_prim(P,i) bind(C,name="glp_get_row_prim")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int), value :: i
                    real(c_double) :: glp_get_row_prim
            end function
            function glp_get_row_dual(P,i) bind(C,name="glp_get_row_dual")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int), value :: i
                    real(c_double) :: glp_get_row_dual
            end function
            function glp_get_col_stat(P,j) bind(C,name="glp_get_col_stat")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int), value :: j
                    integer(c_int) :: glp_get_col_stat
            end function
            function glp_get_col_prim(P,j) bind(C,name="glp_get_col_prim")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int), value :: j
                    real(c_double) :: glp_get_col_prim
            end function
            function glp_get_col_dual(P,j) bind(C,name="glp_get_col_dual")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int), value :: j
                    real(c_double) :: glp_get_col_dual
            end function
            function glp_get_unbnd_ray(P) bind(C,name="glp_get_unbnd_ray")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int) :: glp_get_unbnd_ray
            end function
            function glp_get_it_cnt(P) bind(C,name="glp_get_it_cnt")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int) :: glp_get_it_cnt
            end function
            subroutine glp_set_it_cnt(P,it_cnt) bind(C,name="glp_set_it_cnt")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int), value :: it_cnt
            end subroutine
            function glp_interior(P,parm) bind(C,name="glp_interior")
                use iso_c_binding
                    type(c_ptr), value :: P
                    type(c_ptr), value :: parm
                    integer(c_int) :: glp_interior
            end function
            subroutine glp_init_iptcp(parm) bind(C,name="glp_init_iptcp")
                use iso_c_binding
                use glpk_types
                    type(glp_iptcp) :: parm
            end subroutine
            function glp_ipt_status(P) bind(C,name="glp_ipt_status")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int) :: glp_ipt_status
            end function
            function glp_ipt_obj_val(P) bind(C,name="glp_ipt_obj_val")
                use iso_c_binding
                    type(c_ptr), value :: P
                    real(c_double) :: glp_ipt_obj_val
            end function
            function glp_ipt_row_prim(P,i) bind(C,name="glp_ipt_row_prim")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int), value :: i
                    real(c_double) :: glp_ipt_row_prim
            end function
            function glp_ipt_row_dual(P,i) bind(C,name="glp_ipt_row_dual")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int), value :: i
                    real(c_double) :: glp_ipt_row_dual
            end function
            function glp_ipt_col_prim(P,j) bind(C,name="glp_ipt_col_prim")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int), value :: j
                    real(c_double) :: glp_ipt_col_prim
            end function
            function glp_ipt_col_dual(P,j) bind(C,name="glp_ipt_col_dual")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int), value :: j
                    real(c_double) :: glp_ipt_col_dual
            end function
            subroutine glp_set_col_kind(P,j,kind) bind(C,name="glp_set_col_kind")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int), value :: j
                    integer(c_int), value :: kind
            end subroutine
            function glp_get_col_kind(P,j) bind(C,name="glp_get_col_kind")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int), value :: j
                    integer(c_int) :: glp_get_col_kind
            end function
            function glp_get_num_int(P) bind(C,name="glp_get_num_int")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int) :: glp_get_num_int
            end function
            function glp_get_num_bin(P) bind(C,name="glp_get_num_bin")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int) :: glp_get_num_bin
            end function
            function glp_intopt(P,parm) bind(C,name="glp_intopt")
                use iso_c_binding
                    type(c_ptr), value :: P
                    type(c_ptr), value :: parm
                    integer(c_int) :: glp_intopt
            end function
            subroutine glp_init_iocp(parm) bind(C,name="glp_init_iocp")
                use iso_c_binding
                use glpk_types
                    type(glp_iocp) :: parm
            end subroutine
            function glp_mip_status(P) bind(C,name="glp_mip_status")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int) :: glp_mip_status
            end function
            function glp_mip_obj_val(P) bind(C,name="glp_mip_obj_val")
                use iso_c_binding
                    type(c_ptr), value :: P
                    real(c_double) :: glp_mip_obj_val
            end function
            function glp_mip_row_val(P,i) bind(C,name="glp_mip_row_val")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int), value :: i
                    real(c_double) :: glp_mip_row_val
            end function
            function glp_mip_col_val(P,j) bind(C,name="glp_mip_col_val")
                use iso_c_binding
                    type(c_ptr), value :: P
                    integer(c_int), value :: j
                    real(c_double) :: glp_mip_col_val
            end function
            function glp_print_sol(P,fname) bind(C,name="glp_print_sol")
                use iso_c_binding
                    type(c_ptr), value :: P
                    character(c_char) :: fname(*)
                    integer(c_int) :: glp_print_sol
            end function
            function glp_read_sol(P,fname) bind(C,name="glp_read_sol")
                use iso_c_binding
                    type(c_ptr), value :: P
                    character(c_char) :: fname(*)
                    integer(c_int) :: glp_read_sol
            end function
            function glp_write_sol(P,fname) bind(C,name="glp_write_sol")
                use iso_c_binding
                    type(c_ptr), value :: P
                    character(c_char) :: fname(*)
                    integer(c_int) :: glp_write_sol
            end function
            function glp_print_ipt(P,fname) bind(C,name="glp_print_ipt")
                use iso_c_binding
                    type(c_ptr), value :: P
                    character(c_char) :: fname(*)
                    integer(c_int) :: glp_print_ipt
            end function
            function glp_read_ipt(P,fname) bind(C,name="glp_read_ipt")
                use iso_c_binding
                    type(c_ptr), value :: P
                    character(c_char) :: fname(*)
                    integer(c_int) :: glp_read_ipt
            end function
            function glp_write_ipt(P,fname) bind(C,name="glp_write_ipt")
                use iso_c_binding
                    type(c_ptr), value :: P
                    character(c_char) :: fname(*)
                    integer(c_int) :: glp_write_ipt
            end function
            function glp_print_mip(P,fname) bind(C,name="glp_print_mip")
                use iso_c_binding
                    type(c_ptr), value :: P
                    character(c_char) :: fname(*)
